--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Max Schemmer"
-  avatar           : "profile.jpg"
-  bio              : "Your biography for the left-hand sidebar"
+  avatar           : "LAB_by_Sebastian.jpg"
+  bio              : "Physicist playing with cold atoms in Florence, Italy (CNR-INO). Previously at HU Berlin (DE), Institut d'Optique, Palaiseau (FR) & NIST, Gaithersburg (US) "
   location         : "Firenz,IT"
   employer         :
   pubmed           : ""
