--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Max Schemmer"
   avatar           : "LAB_by_Sebastian.jpg"
   bio              : "Physicist playing with cold atoms in Florence, Italy (CNR-INO). Previously at HU Berlin (DE), Institut d'Optique, Palaiseau (FR) & NIST, Gaithersburg (US) "
-  location         : "Firenz,IT"
+  location         : "Firenze, IT"
   employer         :
   pubmed           : ""
   googlescholar    : "https://scholar.google.com/citations?user=WFuMCrcAAAAJ&hl=de"
