--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Physicist playing with cold atoms in Florence, Italy (CNR-INO). Previously at HU Berlin (DE), Institut d'Optique, Palaiseau (FR) & NIST, Gaithersburg (US) "
   location         : "Firenze, IT"
   employer         :
-  pubmed           : ""
+  pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=WFuMCrcAAAAJ&hl=de"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
