--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Max Schemmer"
-  avatar           : "LAB_by_Sebastian.jpg"
+  avatar           : ""
   bio              : "Physicist playing with cold atoms in Florence, Italy (CNR-INO). Previously at HU Berlin (DE), Institut d'Optique, Palaiseau (FR) & NIST, Gaithersburg (US) "
   location         : "Firenze, IT"
   employer         :
