--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,17 @@
 # main links links
 main:
 
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+  
     
+  - title: "Gallerie"
+    url: /gallerie/
+
+  - title: "Research"
+    url: /research/
+
+
+  - title: "Publications"
+    url: /publications/    
+
   - title: "Curriculum Vitae"
     url: /cv/
